# django-todo-app

./: pyproject.toml
todo_app/: db.sqlite3
todo_app/create_todo/: apps.py  urls.py  views.py
todo_app/list_todo/: apps.py  urls.py  views.py
todo_app/list_todo/migrations/: 0001_initial.py  0002_delete_todoitem.py
todo_app/list_todo/templates/list_todo/: index.html
todo_app/list_todo/templates/list_todo/static/js/: main.fd773ffd.js  main.fd773ffd.js.map
todo_app/myapi/: models.py  urls.py  views.py
todo_app/myapi/migrations/: 0001_initial.py
todo_app/todo_app/: settings.py  urls.py
